# machinekit-hal

./: .ctags_opts  .gitignore  .travis.yml  CMakeLists.txt
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.inc.in  Makefile.modinc.in  configure.ac
src/emc/rs274ngc/: Submakefile
src/hal/components/: CMakeLists.txt  sampler.c  sampler_usr.c  streamer.c  streamer.h
src/hal/cython/: CMakeLists.txt  Submakefile
src/hal/drivers/: CMakeLists.txt
src/hal/i_components/: CMakeLists.txt  Submakefile  conv.icomp.in  mkconv.sh  threadtest.icomp
src/hal/lib/: CMakeLists.txt  Submakefile  hal_accessor.h  hal_list.h  hal_pin.c  hal_ring.c  hal_signal.c  halmodule.cc
src/hal/sample_channel/: sample_channel_pb.c
src/hal/user_comps/: CMakeLists.txt
src/hal/utils/: CMakeLists.txt  Submakefile  comp.g  halcmd.c  halcmd_rtapiapp.cc  instcomp.g  scope.c  scope_trig.c
src/machinetalk/: CMakeLists.txt  Submakefile
src/machinetalk/haltalk/: CMakeLists.txt  Submakefile  haltalk.hh  haltalk_main.cc
src/machinetalk/include/: pbutil.hh  setup_signals.h
src/machinetalk/lib/: CMakeLists.txt  README  Submakefile  ll_zeroconf_register.cc  mk_service.cc  pbutil.cc  zeroconf_resolve.cc  zeroconf_resolve_test.cc
src/machinetalk/messagebus/: Submakefile  messagebus.cc
src/machinetalk/mklauncher/: mklauncher.py
src/machinetalk/mkwrapper/: mkwrapper.py
src/machinetalk/msgcomponents/: CMakeLists.txt
src/machinetalk/nanopb/: CMakeLists.txt
src/machinetalk/proto/: CMakeLists.txt
src/machinetalk/support/: CMakeLists.txt  Submakefile
src/machinetalk/webtalk/: Submakefile  (+3 more)
src/rtapi/: CMakeLists.txt  Submakefile  cpu_dma_latency.c  cpu_dma_latency.h  cpu_dma_latency_helper.c  rtapi.c  rtapi.h.in  rtapi_app.cc  rtapi_atomics.h  rtapi_msgd.cc  rtapi_pci.c  rtapi_support.c  rtapi_time.c
(+65 files in other folders)
